# HubSpot-Clone

./: .gitignore  ICSNetwork.pyproject  README.md  Theme.qml  companies_data.csv  contacts_data.csv  main.py  main.qml  pyproject.toml  resources.qrc  resources_rc.py  tickets_data.csv
.qtcreator/Python_3_11_0venv/: pyvenv.cfg
.qtcreator/Python_3_11_0venv/Scripts/: activate  activate.bat
.qtcreator/Python_3_11_4venv/: pyvenv.cfg
.qtcreator/Python_3_11_4venv/Scripts/: activate  activate.bat
Apps/: Companies.qml
hubspot_clone_backend/: db.sqlite3  manage.py
hubspot_clone_backend/crm/: models.py
hubspot_clone_backend/hubspot_clone_backend/: asgi.py  settings.py  urls.py  wsgi.py
qml/Apps/: Companies.qml  Contacts.qml  Reports.qml  Tickets.qml  qmldir
qml/Themes/: Theme.qml  qmldir
scripts/: generate_fake_data_companies.py  generate_fake_data_contacts.py  generate_fake_data_tickets.py
